<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_main">

    <TextView
        android:id="@+id/tvFamilyMemberForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/family_member_form"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btnAddFamily"
        app:layout_constraintTop_toBottomOf="@id/tvFamilyMemberForm">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:background="@drawable/custom_background">

            <TextView
                android:id="@+id/tvFamilyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                style = "@style/TextViewNormal"
                android:layout_marginTop="15dp"
                android:text="@string/_1_name_of_the_family_member" />

            <EditText
                android:id="@+id/edFamilyName"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:layout_marginStart="20dp"
                style = "@style/CustomEditTextStyle"
                android:layout_marginTop="15dp"
                android:hint="@string/enter_family_member_name" />

            <View style="@style/DividerStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                style = "@style/TextViewNormal"
                android:layout_marginTop="15dp"
                android:text="@string/_2_age" />

            <EditText
                android:id="@+id/edAge"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:layout_marginStart="20dp"
                android:inputType="number"
                style = "@style/CustomEditTextStyle"
                android:layout_marginTop="15dp"
                android:hint="Enter in Years" />

            </LinearLayout>

            <View style="@style/DividerStyle" />
            <TextView
                android:id="@+id/tvAdditionalLand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                style="@style/TextViewNormal"
                android:text="3. Sex" />

            <RadioGroup
                android:id="@+id/rgSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:weightSum="3"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/rdMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/rdFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/rdother"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/other2" />


            </RadioGroup>

            <View style="@style/DividerStyle" />

            <TextView
                android:id="@+id/tvRelationship"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                style = "@style/TextViewNormal"
                android:layout_marginTop="15dp"
                android:text="4. Relationship with the Owner/Occupier" />

            <EditText
                android:id="@+id/edRelationship"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:layout_marginStart="20dp"
                style = "@style/CustomEditTextStyle"
                android:layout_marginTop="15dp"
                android:hint="Enter Relationship" />

            <View style="@style/DividerStyle" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:layout_marginStart="20sp"
                android:layout_marginBottom="5dp"
                style="@style/TextViewNormal"
                android:text="5. Marital Status" />

            <Spinner
                android:id="@+id/spinnerMaritalStatus"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="15sp"
                android:background="@drawable/custom_spinner"
                android:paddingStart="20sp"
                android:spinnerMode="dropdown" />

            <View style="@style/DividerStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:layout_marginStart="20sp"
                android:layout_marginBottom="5dp"
                style="@style/TextViewNormal"
                android:text="6. Education" />

            <Spinner
                android:id="@+id/spinnerEducation"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="15sp"
                android:background="@drawable/custom_spinner"
                android:paddingStart="20sp"
                android:spinnerMode="dropdown" />

            <View style="@style/DividerStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:layout_marginStart="20sp"
                android:layout_marginBottom="5dp"
                style="@style/TextViewNormal"
                android:text="7.Occupation" />
            
            <Spinner
                android:id="@+id/spinnerOccupation"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="15sp"
                android:background="@drawable/custom_spinner"
                android:paddingStart="20sp"
                android:layout_marginBottom="20dp"
                android:spinnerMode="dropdown" />

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddFamily"
        android:layout_width="120sp"
        android:layout_height="40sp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:background="@drawable/custom_button"
        android:text="Add"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnClearFamily"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="10dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClearFamily"
        android:layout_width="120sp"
        android:layout_height="40sp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:background="@drawable/custom_button"
        android:text="Clear"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnAddFamily"
        android:layout_marginStart="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
